Delete MS2 GWT code. Switch to simple job launcher (#6163)