@@ -105,6 +105,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -134,8 +135,6 @@ public class PipelineServiceImpl implements PipelineService, PipelineMXBean
     private static final Logger LOG = LogHelper.getLogger(PipelineService.class, "Pipeline initialization and job requeuing during server startup");
 
     private static final String PREF_LASTPROTOCOL = "lastprotocol";
-    private static final String PREF_LASTSEQUENCEDB = "lastsequencedb";
-    private static final String PREF_LASTSEQUENCEDBPATHS = "lastsequencedbpaths";
     private static final String KEY_PREFERENCES = "pipelinePreferences";
 
     public static final List<String> INACTIVE_JOB_STATUSES = Arrays.asList(
@@ -423,7 +422,7 @@ public class PipelineServiceImpl implements PipelineService, PipelineMXBean
                 return provider;
         }
 
-        return null;
+        return _mapPipelineProviders.get(name);
     }
 
     @Nullable
@@ -636,7 +635,7 @@ public class PipelineServiceImpl implements PipelineService, PipelineMXBean
     }
 
     @Override
-    public HttpView getSetupView(SetupForm form)
+    public HttpView<SetupForm> getSetupView(SetupForm form)
     {
         return new JspView<>("/org/labkey/pipeline/setup.jsp", form, form.getErrors());
     }
@@ -647,14 +646,14 @@ public class PipelineServiceImpl implements PipelineService, PipelineMXBean
         return PipelineController.savePipelineSetup(context, form, errors);
     }
 
-    private String getLastProtocolKey(PipelineProtocolFactory factory)
+    private String getLastProtocolKey(PipelineProtocolFactory<?> factory)
     {
         return PREF_LASTPROTOCOL + "-" + factory.getName();
     }
 
     // TODO: This should be on PipelineProtocolFactory
     @Override
-    public String getLastProtocolSetting(PipelineProtocolFactory factory, Container container, User user)
+    public String getLastProtocolSetting(PipelineProtocolFactory<?> factory, Container container, User user)
     {
         try
         {
@@ -672,79 +671,13 @@ public class PipelineServiceImpl implements PipelineService, PipelineMXBean
 
     // TODO: This should be on PipelineProtocolFactory
     @Override
-    public void rememberLastProtocolSetting(PipelineProtocolFactory factory, Container container, User user,
+    public void rememberLastProtocolSetting(PipelineProtocolFactory<?> factory, Container container, User user,
                                             String protocolName)
     {
         if (user.isGuest())
             return;
         WritablePropertyMap map = PropertyManager.getWritableProperties(user, container, PipelineServiceImpl.KEY_PREFERENCES, true);
         map.put(getLastProtocolKey(factory), protocolName);
-        map.save();
-    }
-
-
-    @Override
-    public String getLastSequenceDbSetting(PipelineProtocolFactory factory, Container container, User user)
-    {
-        try
-        {
-            Map<String, String> props = PropertyManager.getProperties(user, container, PipelineServiceImpl.KEY_PREFERENCES);
-            String lastSequenceDbSetting = props.get(PipelineServiceImpl.PREF_LASTSEQUENCEDB + "-" + factory.getName());
-            if (lastSequenceDbSetting != null)
-                return props.get(PipelineServiceImpl.PREF_LASTSEQUENCEDB + "-" + factory.getName());
-        }
-        catch (Exception e)
-        {
-            LOG.error("Error", e);
-        }
-        return "";
-    }
-
-    @Override
-    public void rememberLastSequenceDbSetting(PipelineProtocolFactory factory, Container container, User user,
-                                              String sequenceDbPath,String sequenceDb)
-    {
-        if (user.isGuest())
-            return;
-        if (sequenceDbPath == null || sequenceDbPath.equals("/"))
-            sequenceDbPath = "";
-        String fullPath = sequenceDbPath + sequenceDb;
-        WritablePropertyMap map = PropertyManager.getWritableProperties(user, container,
-                PipelineServiceImpl.KEY_PREFERENCES, true);
-        map.put(PipelineServiceImpl.PREF_LASTSEQUENCEDB + "-" + factory.getName(), fullPath);
-        map.save();
-    }
-
-    @Nullable
-    @Override
-    public List<String> getLastSequenceDbPathsSetting(PipelineProtocolFactory factory, Container container, User user)
-    {
-        Map<String, String> props = PropertyManager.getProperties(user, container, PipelineServiceImpl.KEY_PREFERENCES);
-        String dbPaths = props.get(PipelineServiceImpl.PREF_LASTSEQUENCEDBPATHS + "-" + factory.getName());
-
-        if (null != dbPaths)
-            return parseArray(dbPaths);
-
-        return null;
-    }
-
-    @Override
-    public void rememberLastSequenceDbPathsSetting(PipelineProtocolFactory factory, Container container, User user,
-                                                   List<String> sequenceDbPathsList)
-    {
-        if (user.isGuest())
-            return;
-        String sequenceDbPathsString = list2String(sequenceDbPathsList);
-        WritablePropertyMap map = PropertyManager.getWritableProperties(user, container,
-                PipelineServiceImpl.KEY_PREFERENCES, true);
-        if (sequenceDbPathsString == null || sequenceDbPathsString.isEmpty() || sequenceDbPathsString.length() >= 2000)
-        {
-            map.remove(PipelineServiceImpl.PREF_LASTSEQUENCEDBPATHS + "-" + factory.getName());
-        }
-        else
-        {
-            map.put(PipelineServiceImpl.PREF_LASTSEQUENCEDBPATHS + "-" + factory.getName(), sequenceDbPathsString);
-        }
         map.save();
     }
 
@@ -779,12 +712,6 @@ public class PipelineServiceImpl implements PipelineService, PipelineMXBean
     }
 
     @Override
-    public List<PipelineStatusFileImpl> getJobsWaitingForFiles(Container c)
-    {
-        return PipelineStatusManager.getJobsWaitingForFiles(c);
-    }
-
-    @Override
     public List<PipelineStatusFileImpl> getQueuedStatusFiles(Container c)
     {
         return PipelineStatusManager.getQueuedStatusFilesForContainer(c);
@@ -808,27 +735,6 @@ public class PipelineServiceImpl implements PipelineService, PipelineMXBean
         throw new UnsupportedOperationException("Method supported only on remote server");
     }
 
-    private List<String> parseArray(String dbPaths)
-    {
-        if(dbPaths == null) return null;
-        if(dbPaths.isEmpty()) return new ArrayList<>();
-        String[] tokens = dbPaths.split("\\|");
-        return new ArrayList<>(Arrays.asList(tokens));
-    }
-
-    private String list2String(List<String> sequenceDbPathsList)
-    {
-        if(sequenceDbPathsList == null) return null;
-        StringBuilder temp = new StringBuilder();
-        for(String path:sequenceDbPathsList)
-        {
-            if(!temp.isEmpty())
-                temp.append("|");
-            temp.append(path);
-        }
-        return temp.toString();
-    }
-
     /**
      * Recheck the status of the jobs that may or may not have been started already
      */
@@ -845,10 +751,10 @@ public class PipelineServiceImpl implements PipelineService, PipelineMXBean
 
                 try
                 {
-                    Class c = descriptor.getImplementationClass();
+                    Class<?> c = descriptor.getImplementationClass();
                     if (ResumableDescriptor.class.isAssignableFrom(c))
                     {
-                        ResumableDescriptor resumable = ((Class<ResumableDescriptor>)c).newInstance();
+                        ResumableDescriptor resumable = ((Class<ResumableDescriptor>)c).getDeclaredConstructor().newInstance();
                         resumable.resume(descriptor);
                     }
                 }
@@ -856,7 +762,8 @@ public class PipelineServiceImpl implements PipelineService, PipelineMXBean
                 {
                     LOG.error("Failed to get implementation class from descriptor " + descriptor, e);
                 }
-                catch (IllegalAccessException | InstantiationException e)
+                catch (IllegalAccessException | InstantiationException | NoSuchMethodException |
+                       InvocationTargetException e)
                 {
                     LOG.error("Failed to resume jobs for descriptor " + descriptor, e);
                 }
@@ -989,16 +896,16 @@ public class PipelineServiceImpl implements PipelineService, PipelineMXBean
         if (pr == null || !pr.isValid())
             throw new NotFoundException();
 
-        Path dirData = null;
+        Path dirData = pr.getRootNioPath();
         if (path != null)
         {
             dirData = pr.resolveToNioPath(path);
-            if (dirData == null || !NetworkDrive.exists(dirData))
+            if (!NetworkDrive.exists(dirData))
                 throw new NotFoundException("Could not resolve path: " + path);
         }
 
-        TaskPipeline taskPipeline = PipelineJobService.get().getTaskPipeline(taskId);
-        AbstractFileAnalysisProtocolFactory factory = PipelineJobService.get().getProtocolFactory(taskPipeline);
+        TaskPipeline<?> taskPipeline = PipelineJobService.get().getTaskPipeline(taskId);
+        AbstractFileAnalysisProtocolFactory<?> factory = PipelineJobService.get().getProtocolFactory(taskPipeline);
         return new PathAnalysisProperties(pr, dirData, factory);
     }
 
@@ -1025,11 +932,11 @@ public class PipelineServiceImpl implements PipelineService, PipelineMXBean
         {
             throw new IllegalArgumentException("Must specify a protocol name");
         }
-        TaskPipeline taskPipeline = PipelineJobService.get().getTaskPipeline(form.getTaskId());
+        TaskPipeline<?> taskPipeline = PipelineJobService.get().getTaskPipeline(form.getTaskId());
         PathAnalysisProperties props = getFileAnalysisProperties(context.getContainer(), form.getTaskId(), form.getPath());
         PipeRoot root = props.getPipeRoot();
         Path dirData = props.getDirData();
-        AbstractFileAnalysisProtocolFactory factory = props.getFactory();
+        AbstractFileAnalysisProtocolFactory<?> factory = props.getFactory();
 
         if (taskPipeline.isUseUniqueAnalysisDirectory())
         {
@@ -1039,7 +946,7 @@ public class PipelineServiceImpl implements PipelineService, PipelineMXBean
                 throw new IOException("Failed to create unique analysis directory: " + FileUtil.getAbsoluteCaseSensitiveFile(dirData.toFile()).getAbsolutePath());
             }
         }
-        AbstractFileAnalysisProtocol protocol = factory.getProtocol(root, dirData, form.getProtocolName(), false);
+        AbstractFileAnalysisProtocol<?> protocol = factory.getProtocol(root, dirData, form.getProtocolName(), false);
         if (protocol == null || form.isAllowProtocolRedefinition())
         {
             String xml;
@@ -1059,7 +966,9 @@ public class PipelineServiceImpl implements PipelineService, PipelineMXBean
                 }
                 ParamParser parser = PipelineJobService.get().createParamParser();
                 Map<String, String> params = new HashMap<>();
-                Map<String, Object> parsedMap = JsonUtil.DEFAULT_MAPPER.readValue(form.getConfigureJson(), new TypeReference<Map<String, Object>>(){});
+                Map<String, Object> parsedMap = JsonUtil.DEFAULT_MAPPER.readValue(form.getConfigureJson(), new TypeReference<>()
+                {
+                });
                 for (Map.Entry<String, Object> entry : parsedMap.entrySet())
                 {
                     params.put(entry.getKey(), entry.getValue() == null ? null : entry.getValue().toString());
@@ -1070,7 +979,8 @@ public class PipelineServiceImpl implements PipelineService, PipelineMXBean
             protocol = PipelineJobService.get().getProtocolFactory(taskPipeline).createProtocolInstance(
                     form.getProtocolName(),
                     form.getProtocolDescription(),
-                    xml);
+                    xml,
+                    context.getContainer());
 
             protocol.setEmail(context.getUser().getEmail());
             protocol.validate(root);
@@ -1150,7 +1060,7 @@ public class PipelineServiceImpl implements PipelineService, PipelineMXBean
     public boolean isProtocolDefined(AnalyzeForm form)
     {
         PathAnalysisProperties props = getFileAnalysisProperties(form.getContainer(), form.getTaskId(), form.getPath());
-        AbstractFileAnalysisProtocolFactory factory = props.getFactory();
+        AbstractFileAnalysisProtocolFactory<?> factory = props.getFactory();
         return factory.getProtocol(props.getPipeRoot(), props.getDirData(), form.getProtocolName(), false) != null;
     }
 
@@ -1184,11 +1094,10 @@ public class PipelineServiceImpl implements PipelineService, PipelineMXBean
 
     public static class TestCase extends Assert
     {
-        private static String PROJECT_NAME = "__PipelineRootTestProject";
-        private static String FOLDER_NAME = "subfolder";
-        private static String DEFAULT_ROOT_URI = "/files/__PipelineRootTestProject/@files";
-        private static String FILE_ROOT_SUFFIX = "_FileRootTest";
-        private static String PIPELINE_ROOT_SUFFIX = "_PipelineRootTest";
+        private static final String PROJECT_NAME = "__PipelineRootTestProject";
+        private static final String FOLDER_NAME = "subfolder";
+        private static final String FILE_ROOT_SUFFIX = "_FileRootTest";
+        private static final String PIPELINE_ROOT_SUFFIX = "_PipelineRootTest";
 
         private User _user;
         private Container _project;
@@ -1228,6 +1137,7 @@ public class PipelineServiceImpl implements PipelineService, PipelineMXBean
             // verify pipeline root and file root are set to defaults and they they point to the same place
             assertEquals("The pipeline root isDefault flag was not set correctly.", true, pipelineRootSetting.isFileRoot());
             assertEquals("The default pipeline root was not set the same as the default file root.", pipelineRoot, fileRoot);
+            String DEFAULT_ROOT_URI = "/files/__PipelineRootTestProject/@files";
             assertTrue("The pipeline root uri was: " + FileUtil.uriToString(pipelineRootSetting.getUri()) + ", but expected: " + DEFAULT_ROOT_URI, FileUtil.uriToString(pipelineRootSetting.getUri()).contains(DEFAULT_ROOT_URI));
 
             // ensure everything back to the way it was before test ran
